[package]
name = "furakus"
version = "0.0.1"
authors = ["PZ Read <netfirewall@gmail.com>"]
license = "MIT"
repository = "https://github.com/pzread/furakus"

[[bin]]
name = "furakus"
path = "src/server.rs"

[lib]
name = "furakus"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "pzread/furakus" }
appveyor = { repository = "pzread/furakus" }

[dependencies]
bytes = "0.4"
futures = "0.1"
headers = "0.2"
hyper = { version = "0.12", default-features = false }
lazy_static = "1.0"
native-tls = "0.2"
regex = "1.0"
ring = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
tokio = "0.1"
tokio-tls = "0.2"
toml = "0.4"
url = "1.0"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
intra-pipe = "0.1"
reqwest = "0.9"
