[package]
name = "furakus-next"
version = "0.1.0"
authors = ["PZ Read"]
edition = "2018"

[dependencies]
byteorder = "1"
bytes = "0.4"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "compat", "nightly"] }
hyper = "0.12"
lazy_static = "1"
owning_ref = "0.4"
parking_lot = "0.8"
regex = "1"
ring = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "0.1"
url = "1"
